Apply spotless, fix forbiddenapis, minor tweaks